# Server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
src/valueapi/: main.py
