[project]
name = "valueapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonas Blatt", email = "jonasblatt@uni-koblenz.de" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "APScheduler",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
